--- a/CookingWithCPP/messages_es.po
+++ b/CookingWithCPP/messages_es.po
@@ -14,7 +14,7 @@ msgstr "(Spanish):"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: es \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: Asparagus/Asparagus.cpp:28
